feat(job): add job filtering, enums for JobType and JobStatus, and improve job APIs